# tree-sitter-c2rust

./: Cargo.toml  compile_commands.json
.github/workflows/: rust.yml  sanitize.yml
cli/: Cargo.toml
cli/loader/: Cargo.toml
cli/src/tests/: parser_test.rs
highlight/: Cargo.toml
lib/: Cargo.toml
lib/binding_rust/: ffi.rs  lib.rs  util.rs
lib/binding_rust/core_wrapper/: mod.rs
lib/binding_rust/core_wrapper/core/: api_raw.rs  get_changed_ranges.rs  language.rs  lexer.rs  node.rs  parser.rs  query.rs  stack.rs  subtree.rs  tree.rs  tree_cursor.rs
process_c2rust/src/: main.rs
script/: test
tags/: Cargo.toml
