[workspace]
default-members = ["cli"]
members = [
    "cli",
    "lib",
    "process_c2rust"
]
resolver = "2"

[workspace.package]
rust-version = "1.65"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = "s"   # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.

[profile.dev.package.tree-sitter-c2rust]
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
