[package]
name = "tree-sitter-c2rust"
description = "Rust bindings to the Tree-sitter parsing library, with a pure Rust runtime via c2rust"
version = "0.20.10"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>", "Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "binding_rust/README.md"
keywords = ["incremental", "parsing"]
categories = ["api-bindings", "parsing", "text-editors"]
repository = "https://github.com/shadaj/tree-sitter-c2rust"
rust-version.workspace = true

include = [
  "/binding_rust/*",
  "/Cargo.toml",
  "/include/*",
  "/src/*.h",
  "/src/*.c",
  "/src/unicode/*",
]

[features]
capi = ["errno", "libc"]

[dependencies]
regex = "1.9.1"

c2rust-bitfields = "0.3"
once_cell = "1.3.1"
errno = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }

[lib]
path = "binding_rust/lib.rs"
